Complete list of commits can be found at:
https://github.com/devinsays/visual/commits/master

Visual 0.6

- Display full content by default on archives
- Added full-width page template
- Replace Options Framework with theme customizer

Visual 0.5

- Updates for widget padding
- Fix for masonry margins
- Better menus for small screen sizes

Visual 0.4

- Included Options Framework library directly in theme
- Support for Jetpack Infinite Scroll

Visual 0.3

- Added options panel
- Added multiple style options (dark, light, minimal)
- Added option for footer text
- Removed image lazy loading
- Update SASS files to use bourbon
- Bugfix for responsive menus
- Added .pot file for translations

Visual 0.2.2

- Style update for pre tags
- Updates readme.txt to link to licenses

Visual 0.2.1

- New screenshot
- Updated theme URI
- Better support for fallback menus

Visual 0.2

- Added Icon font Entypo
- Lazy load of images in masonry layout
- Updates to archive, search and 404 templates
- Design polish

Visual 0.1

- Initial submission to WordPress.org