@@ -3,11 +3,11 @@ Theme Name: Visual
 Theme URI: http://wptheming.com/2013/03/visual-theme/
 Author: Devin Price
 Author URI: http://wptheming.com
-Description: Visual is a well-crafted responsive theme designed to showcase images, artwork and photgraphy in a smart grid layout.  Alternative styles (both light and dark) are available to select in the options panel.  An icon font ensures crisp display on retina devices and quick load times.  It's simple for new users to set up.  Developers can easily extend the code in a child theme.  For more information and a theme demo, visit: http://wptheming.com/?p=5277.
-Version: 0.5
+Description: Visual is a well-crafted responsive theme designed to showcase images, artwork and photgraphy in a smart grid layout.  An icon font ensures crisp display on retina devices and quick load times.  It's simple for new users to set up.  Developers can easily extend the code in a child theme.  For more information and a theme demo, visit: http://wptheming.com/?p=5277.
+Version: 0.6
 License: GNU General Public License
 License URI: license.txt
-Tags: flexible-width, featured-images, post-formats, translation-ready, photoblogging, theme-options, dark, light
+Tags: flexible-width, featured-images, post-formats, translation-ready, photoblogging, theme-options, dark
 
 This theme, like WordPress, is licensed under the GPL.
 Have fun customizing it and sharing your work with others!
